Am now ignoring all of the generated files. I think that will make it easier down the road in git.
Started building the functions that will be in the CP2112_HIDAPI object.
Currently it causes a crash but will investigate this later.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,18 @@
 *.exe
 *.out
 *.app
+
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/debug/CP2112_Testing_Console.exe.embed.manifest
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/debug/CP2112_Testing_Console.exe_manifest.rc
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/debug/CP2112_Testing_Console.exe_manifest.res
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/debug/CP2112_Testing_Console.exp
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/debug/CP2112_Testing_Console.ilk
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/debug/cp2112_testing_console.pdb
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_64bit/release/CP2112_Testing_Console.exe.embed.manifest
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_64bit/release/CP2112_Testing_Console.exp
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/Makefile
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/Makefile.Debug
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_32bit/Makefile.Release
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_64bit/Makefile
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_64bit/Makefile.Debug
+testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_64bit/Makefile.Release
