Couple minor changes, it was lucky that the 8 byte read worked fully. Now it should all work great.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ testing/console/CP2112_Testing_Console/Qt_5_3_MSVC2013_OpenGL_64bit/Makefile.Rel
 *Makefile.Debug
 *Makefile.Release
 *.pro.user
+*.pro.user*
