Couple minor updates. Changed the QT implimentation over to libusb. Don't forget to copy over the udev file. Added a little more to the README and formated the .gitignore a little more.

--- a/.gitignore
+++ b/.gitignore
@@ -21,13 +21,13 @@
 *.app
 
 #build Files
-
 *.ilk
 *.pdb
 *.ilk
 *.exp
 Makefile*
 
+#QT user config files
 *.autosave
 *.pro.user
 *.pro.user*
@@ -40,3 +40,4 @@ Makefile*
 
 #cython-hidapi
 cython-hidapi/
+
